--- a/notes.html
+++ b/notes.html
@@ -73,7 +73,7 @@
        <p>this is the quantam modal paper for the B.tech 1 st year student .you can read it online or Download in your device like phone ,tab,computer.if you want to Download than click on download button.Thank you for visit
        </p>
 
-         <iframe src="data/Physics Quantam.pdf" width= 90%;  height= 500px; title="Download Quantam Physics "   ></iframe>
+         <iframe src="https://drive.google.com/file/d/1woleq2z9v1yByWfkNjFegYVs2TW3NhbQ/preview" width="640" height="480" allow="autoplay"></iframe>
 
        <br><br>
        <a href="data/Physics Quantam.pdf" Download><button  class="btn btn-dark"type="button" name="button">Download</button></a>
