--- a/notes.html
+++ b/notes.html
@@ -76,7 +76,7 @@
          <iframe src="https://drive.google.com/file/d/1woleq2z9v1yByWfkNjFegYVs2TW3NhbQ/preview" width="640" height="480" allow="autoplay"></iframe>
 
        <br><br>
-       <a href="data/Physics Quantam.pdf" Download><button  class="btn btn-dark"type="button" name="button">Download</button></a>
+       <a href="https://drive.google.com/file/d/1woleq2z9v1yByWfkNjFegYVs2TW3NhbQ/preview" Download><button  class="btn btn-dark"type="button" name="button">Download</button></a>
        </div>
   <hr>
 
